<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/login_name"
        style="@style/login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_edit_onchecked"
        android:drawableLeft="@drawable/login_username_white"
        android:hint="@string/login_name"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/login_pass"
        style="@style/login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edit_onchecked"
        android:drawableLeft="@drawable/login_password_white"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp" />

    <RelativeLayout
        android:id="@+id/linearcontenter"
        style="@style/login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_pass"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_pass"
            android:checked="true" />

        <CheckBox
            android:id="@+id/login_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_myself"
            android:checked="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearcontenter"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_btn_background"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/login_btn" />
    <Button
        android:id="@+id/main_btn"
        style="@style/login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="40dp"
        android:background="@drawable/exit_btn"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/intent_to_main" />

</RelativeLayout>