<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5000"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/exit_btn"
        android:text="@string/user_out" />

    <Button
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/exit"
        android:layout_marginTop="10dp"
        android:background="@drawable/photo_btn"
        android:text="@string/album" />

    <Button
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/album"
        android:layout_marginTop="10dp"
        android:background="@drawable/photo_btn"
        android:text="@string/take_photo" />

</RelativeLayout>