<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- 主界面的头部 -->

    <android.support.v4.view.ViewPager
        android:id="@+id/title_pager"
        android:layout_width="match_parent"
        android:layout_height="160dp" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/title_pager"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="#ccc"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="#ccc"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/topic_title"
        style="@style/login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_pager"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/topic" />

        <TextView
            android:id="@+id/more_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/checked_background"
            android:text="@string/more_topic"
            android:textColor="@color/blackgrey" />
    </RelativeLayout>

    <ListView
        android:id="@+id/topic_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topic_title" >
    </ListView>

    <RelativeLayout
        style="@style/login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topic_list"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp" >

        <TextView
            style="@style/font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/today_notice" />

        <TextView
            android:id="@+id/more_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/checked_background"
            android:text="@string/more_notice"
            android:textColor="@color/blackgrey" />
    </RelativeLayout>

</RelativeLayout>