<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/re1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Foreground"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/skin_searchbar_icon" />

        <EditText
            android:id="@+id/search_mess"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/search_icon"
            android:hint="@string/search" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Foreground"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/send_mess"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/send_mess"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_mess"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/send_mess"
            android:hint="@string/input" />
    </RelativeLayout>

    <ListView
        android:layout_marginTop="5dp"
        android:id="@+id/choose_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/re2"
        android:layout_below="@id/re1" >
    </ListView>

</RelativeLayout>